aws/cloudformation.yaml
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Email Recommendation System - EC2 with Docker",
  "Parameters": {
    "InstanceType": {
      "Type": "String",
      "Default": "t3.small",
      "AllowedValues": ["t3.micro", "t3.small", "t3.medium"],
      "Description": "EC2 instance type"
    },
    "KeyPairName": {
      "Type": "AWS::EC2::KeyPair::KeyName",
      "Description": "Name of an existing EC2 key pair for SSH access"
    }
  },
  "Resources": {
    "SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow HTTPS and SSH access",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "CidrIp": "0.0.0.0/0",
            "Description": "HTTPS"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0",
            "Description": "HTTP"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "CidrIp": "0.0.0.0/0",
            "Description": "SSH"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 8000,
            "ToPort": 8000,
            "CidrIp": "0.0.0.0/0",
            "Description": "FastAPI (testing only)"
          }
        ]
      }
    },
    "EC2Instance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": {"Ref": "InstanceType"},
        "KeyName": {"Ref": "KeyPairName"},
        "ImageId": "ami-0c02fb55956c7d316",
        "SecurityGroups": [{"Ref": "SecurityGroup"}],
        "UserData": {"Fn::Base64": {"Fn::Join": ["", ["#!/bin/bash\n",
          "yum update -y\n",
          "yum install -y docker git curl\n",
          "systemctl start docker\n",
          "systemctl enable docker\n",
          "usermod -aG docker ec2-user\n",
          "cd /home/ec2-user\n",
          "git clone https://github.com/Rishi12318/email_recommendation_chatbot_extension.git email-recommendation\n",
          "cd email-recommendation\n",
          "docker compose up -d --build\n"
        ]]}},
        "Tags": [{"Key": "Name", "Value": "EmailRecommender"}]
      }
    }
  },
  "Outputs": {
    "InstanceId": {
      "Value": {"Ref": "EC2Instance"}
    },
    "PublicIP": {
      "Value": {"Fn::GetAtt": ["EC2Instance", "PublicIp"]}
    },
    "APIEndpoint": {
      "Value": {"Fn::Join": ["", ["http://", {"Fn::GetAtt": ["EC2Instance", "PublicIp"]}, ":8000"]]}
    }
  }
}
